tests/positive/ConfluentScoping/B.juvix
module B;

axiom Axiom : Type;
