tests/negative/Internal/Positivity/E1.juvix
module E1;

axiom B : Type;
type X :=
  c : (X -> B) -> X;

end;